# matter_support

./: README.md  package-lock.json
.github/: CODEOWNERS
.github/actions/download-artifact/: action.yml  downloadAndExtractArtifact.js  index.js
.github/workflows/: cla-assistant.yml  prevent-provision-changes.yml  publish-provisoning.yaml
board-support/efr32/bootloader_binaries/: README.md  bootloader-storage-internal-single-512k-BRD2709A.s37
board-support/efr32/efr32mg24/BRD2601B/: matter-platform.pintool
board-support/efr32/efr32mg24/BRD2703A/: matter-platform.pintool
board-support/efr32/efr32mg24/BRD4186C/: matter-platform.pintool
board-support/efr32/efr32mg24/BRD4187C/: matter-platform.pintool
board-support/efr32/efr32mg26/BRD2608A/: matter-platform.pintool
board-support/efr32/efr32mg26/BRD4116A/: matter-platform.pintool
board-support/efr32/efr32mg26/BRD4117A/: matter-platform.pintool
provision/: .gitignore  BUILD.gn  args.gni  bluet.py  devices.yaml
provision/headers/: ProvisionEncoder.h  ProvisionManager.h  ProvisionProtocol.h  ProvisionStorage.h  ProvisionedDataProvider.h
provision/images/: efr32mg24_csr_oids.s37  efr32mg24_tz.s37  efr32mg26_csr_oids.s37  si917_csr_oids.rps  si917y_csr_oids.rps  sixg3k_csr_oids.s37  sixg3l_csr_oids.s37  sixg3w_csr_oids.s37  sixg3x8m_csr_oids.s37
provision/modules/: device.py  jlink.py  manager.py  parameters.py  parameters.yaml  util.py
provision/patch/: efr32mg24.ld  efr32mg26.ld  x509_create.patch
scripts/: copy_librairies.py  generate_boards.py
sockets/: ifaddrs.h
sockets/netinet/: in.h
(+147 files in other folders)
